# wayland-sandbox

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  decoration.hpp  display.cpp  display.hpp  file_descriptor.cpp  file_descriptor.hpp  keyboard.hpp  main.cpp  pointer.hpp  registry.hpp  scoped_mmap.hpp  screen.cpp  screen.hpp  screen_properties.hpp  seat.hpp  shm_buffer.cpp  shm_buffer.hpp  shm_pool.cpp  shm_pool.hpp  test.cpp  test.hpp  types.hpp  window.cpp  window.hpp  window_info.hpp
cmake/: FindGlib.cmake  FindPango.cmake  FindPangoCairo.cmake  FindWayland.cmake  Finddbus.cmake  Findlibdecor_0.cmake  Findwayland_client.cmake  Findwayland_server.cmake  code_gen.cmake  warning_setup.cmake
decor/: context.cpp  context.hpp  frame.cpp  frame.hpp
libdecor/: CMakeLists.txt
xdg/: surface.cpp  surface.hpp  toplevel.cpp  toplevel.hpp  wm_base.cpp  wm_base.hpp
zxdg/: decoration.cpp  decoration.hpp
